[fix] (style.css, wc_comments.html) table element needs inline-block to display correctly on firefox

--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -185,3 +185,7 @@
 
 #line-chart .x.axis path {
 }
+
+.comments {
+  display: inline-block;
+}
